--- a/christina.html
+++ b/christina.html
@@ -13,8 +13,8 @@
   <body>
     <a href='./index.html'><div class="homeButtom"><img src="./images/pti.png" class="homeButton-Image"/></div></a>
     <h1 class="paintingTitle"></h1>
-    <img src="./art/sheep.jpg" class="painting"/>
-   <img src="./art/sheep_depth.png" id="depthMap"/>
+    <img src="./art/polio.jpg" class="painting"/>
+   <img src="./art/polio_depth.png" id="depthMap"/>
     <canvas class="particleMap"></canvas>
 
   </body>
