--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
      <div class = "container">
         <div class="artWrapper">
           <div class="artBox"><a href='./degas.html'><img src="./art/ballet.jpg" class="artIcon"/></a></div>
-          <div class = "artLabel">Testing: i work!</div>
+          <div class = "artLabel">Testing</div>
         </div>
         <div class="artWrapper">
-          <div class="artBox"><img src="./art/sheep.jpg" class="artIcon"/></div>
+          <div class="artBox"><a href='./joan.html'><img src="./art/sheep.jpg" class="artIcon"/></a></div>
           <div class = "artLabel">added soon</div>
         </div>
         <div class="artWrapper">
-          <div class="artBox"><img src="./art/polio.jpg" class="artIcon"/></div>
+          <div class="artBox"><a href="./christina.html"><img src="./art/polio.jpg" class="artIcon"/></a></div>
           <div class = "artLabel">added soon</div>
         </div>
      </div>
