--- a/degas.html
+++ b/degas.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link rel="stylesheet" href="./styles/index.css" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="./js/player.js"></script>
   <script src="./js/huggabug.js"></script>
    <script src="./js/index.js"></script>
   </head>
@@ -14,8 +15,8 @@
     <a href='./index.html'><div class="homeButtom"><img src="./images/pti.png" class="homeButton-Image"/></div></a>
     <h1 class="paintingTitle"></h1>
     <img src="./art/ballet.jpg" class="painting"/>
-    <!--<img src="./art/ballet_depth.png" id="depthMap"/>-->
+    <img src="./art/ballet_depth.png" id="depthMap"/>
     <canvas class="particleMap"></canvas>
-
+    <div class="balletBar"/>
   </body>
 </html>
