--- a/degas.html
+++ b/degas.html
@@ -9,6 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="./js/player.js"></script>
   <script src="./js/huggabug.js"></script>
+  <script src="./js/degas.js"></script>
    <script src="./js/index.js"></script>
   </head>
   <body>
@@ -16,6 +17,7 @@
     <h1 class="paintingTitle"></h1>
     <img src="./art/ballet.jpg" class="painting"/>
     <img src="./art/ballet_depth.png" id="depthMap"/>
+    <img src="./art/ballet_flooring.png" id="blockMap"/>
     <canvas class="particleMap"></canvas>
     <div class="balletBar"/>
   </body>
