added doll cutouts

--- a/degas.html
+++ b/degas.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./styles/index.css" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="./js/player.js"></script>
+  <script src="./js/paperdolls.js"></script>
   <script src="./js/huggabug.js"></script>
   <script src="./js/degas.js"></script>
    <script src="./js/index.js"></script>
