added more cutouts

--- a/christina.html
+++ b/christina.html
@@ -7,7 +7,10 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link rel="stylesheet" href="./styles/index.css" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <script src="./js/player.js"></script>
+  <script src="./js/paperdolls.js"></script>
   <script src="./js/huggabug.js"></script>
+  <script src="./js/cristina.js"></script>
    <script src="./js/index.js"></script>
   </head>
   <body>
@@ -15,7 +18,8 @@
     <h1 class="paintingTitle"></h1>
     <img src="./art/polio.jpg" class="painting"/>
    <img src="./art/polio_depth.png" id="depthMap"/>
+   <img src="./art/polio_flooring.png" id="blockMap"/>
     <canvas class="particleMap"></canvas>
-
+    <div class="balletBar"/>
   </body>
 </html>
