--- a/1500.html
+++ b/1500.html
@@ -10,15 +10,15 @@
   <script src="./js/player.js"></script>
   <script src="./js/paperdolls.js"></script>
   <script src="./js/huggabug.js"></script>
-  <script src="./js/degas.js"></script>
+  <script src="./js/1500s.js"></script>
    <script src="./js/game.js"></script>
   </head>
   <body>
     <a href='./index.html'><div class="homeButtom"><img src="./images/pti.png" class="homeButton-Image"/></div></a>
     <h1 class="paintingTitle"></h1>
-    <img src="./art/ballet.jpg" class="painting"/>
-    <img src="./art/ballet_depth.png" id="depthMap"/>
-    <img src="./art/ballet_flooring.png" id="blockMap"/>
+    <img src="./art/1500s.jpg" class="painting"/>
+    <img src="./art/1500s_depth.png" id="depthMap"/>
+    <img src="./art/1500s_flooring.png" id="blockMap"/>
     <canvas class="particleMap"></canvas>
     <div class="balletBar"/>
   </body>
