added more cutouts

--- a/1650.html
+++ b/1650.html
@@ -11,6 +11,7 @@
   <script src="./js/paperdolls.js"></script>
   <script src="./js/huggabug.js"></script>
   <script src="./js/1650s.js"></script>
+  <script src="./js/utils.js"></script>
    <script src="./js/game.js"></script>
   </head>
   <body>
