--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="./js/player.js"></script>
+  <script src="./js/utils.js"></script>
   <script src="./js/index.js"></script>
   </head>
   <body>
