--- a/degas.html
+++ b/degas.html
@@ -21,6 +21,9 @@
     <img src="./art/ballet_depth.png" id="depthMap"/>
     <img src="./art/ballet_flooring.png" id="blockMap"/>
     <canvas class="particleMap"></canvas>
-    <div class="balletBar"/>
+
+     <div class="blahBar2">
+        <div class = "artLabel">'The Dance Lesson' by Edgar Degas, c. 1879, oil on canvas, National Gallery of Art</div>
+     </div>
   </body>
 </html>
