added remaining paintings

--- a/1500.html
+++ b/1500.html
@@ -21,6 +21,8 @@
     <img src="./art/1500s_depth.png" id="depthMap"/>
     <img src="./art/1500s_flooring.png" id="blockMap"/>
     <canvas class="particleMap"></canvas>
-    <div class="balletBar"/>
+    <div class="blahBar2">
+        <div class = "artLabel">'The Garden of Earthly Delights', Hieronymus Bosch, c. 1500, oil on oak panels</div>
+     </div>
   </body>
 </html>
