--- a/1580.html
+++ b/1580.html
@@ -21,6 +21,8 @@
     <img src="./art/1580s_depth.png" id="depthMap"/>
     <img src="./art/1580s_flooring.png" id="blockMap"/>
     <canvas class="particleMap"></canvas>
-    <div class="balletBar"/>
+     <div class="blahBar2">
+        <div class = "artLabel">'The Harrowing of Hell' by Jacob Isaacsz. van Swanenburg, c. 1620</div>
+     </div>
   </body>
 </html>
