--- a/1650.html
+++ b/1650.html
@@ -21,6 +21,8 @@
     <img src="./art/1650s_depth.png" id="depthMap"/>
     <img src="./art/1650s_flooring.png" id="blockMap"/>
     <canvas class="particleMap"></canvas>
-    <div class="balletBar"/>
+     <div class="blahBar2">
+        <div class = "artLabel">'The Bedroom' by Pieter de Hooch, c. 1660, Oil on canvas, National Gallery of Art</div>
+     </div>
   </body>
 </html>
