--- a/1880.html
+++ b/1880.html
@@ -21,6 +21,8 @@
     <img src="./art/1880/1880s_depth.png" id="depthMap"/>
     <img src="./art/1880/1880s_flooring.png" id="blockMap"/>
     <canvas class="particleMap"></canvas>
-    <div class="balletBar"/>
+    <div class="blahBar2">
+        <div class = "artLabel">'Street in Venice', John Singer Sargent, c. 1882. National Gallery of Art, Washington DC. 45.1 cm × 53.9 cm</div>
+     </div>
   </body>
 </html>
