--- a/1890.html
+++ b/1890.html
@@ -21,6 +21,8 @@
     <img src="./art/1890/1890s_depth.png" id="depthMap"/>
     <img src="./art/1890/1890s_flooring.png" id="blockMap"/>
     <canvas class="particleMap"></canvas>
-    <div class="balletBar"/>
+    <div class="blahBar2">
+        <div class = "artLabel">'Café Terrace at Night' by  Vincent van Gogh, c. 1888, oil on canvas,  Kröller-Müller Museum, Otterlo</div>
+     </div>
   </body>
 </html>
